# tap-airbyte-wrapper

./: .gitignore  LICENSE  README.md  meltano.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci.yml  project_add.yml
tap_airbyte/: tap.py
tap_airbyte/tests/: test_core.py  test_sync.py  test_syncs.py
tap_airbyte/tests/fixtures/: PUBLIC_APIS.singer  SMEARGLE.singer
tests/: __init__.py  test_core.py  test_syncs.py
tests/fixtures/: KPHX.singer  SMEARGLE.singer
