[tool.poetry]
name = "tap-airbyte"
version = "0.7.0"
description = "Singer tap for Airbyte, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Alex Butler"]
keywords = [
    "ELT",
    "Airbyte",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
importlib-resources = { version = "==6.4.*", python = "<3.9" }
singer-sdk = { version="~=0.36.0", extras = [] }
fs-s3fs = { version = "~=1.1.1", optional = true }
orjson = "^3.10.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
singer-sdk = { version="~=0.36.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.black] # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 100
target-version = ["py39"]
preview = true

[tool.isort] # https://pycqa.github.io/isort/docs/configuration/options.html
color_output = true
line_length = 100
profile = "black"
src_paths = "tap_airbyte"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-airbyte = 'tap_airbyte.tap:TapAirbyte.cli'
